# Basics_Cplusplus

./: .clang-format  .gitignore  Arrays.cpp  ArrowOperator.cpp  Asynchronous.cpp  Benchmarking.cpp  CMakeLists.txt  Casting.cpp  Chrono.cpp  CreationObjects.cpp  DeducingTypes.cpp  DynamicCast.cpp  FunctionPointers.cpp  Hello_world  Hello_world.cpp  ImplicitExplicit.cpp  Interfaces.cpp  Item18.cpp  Item18.hpp  Item25.cpp  Item25.hpp  Item7.cpp  Iterators.cpp  Lambda.cpp  Lambda.hpp  LocaStatic.cpp  MultidimensionalArray.cpp  Mutable.cpp  ObjectsLifetime.cpp  Operators.cpp  README.md  Singleton.cpp  SmartPointers.cpp  Sort.cpp  StdVector.cpp  StringLiterals.cpp  Strings.cpp  Structure_Bindings.cpp  Templates.cpp  TernaryOperators.cpp  (+8 more)
tests/: Item18Test.cpp  Item25Test.cpp  LambdaTest.cpp  SampleTest.cpp
